--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,19 +1,20 @@
-@chartset "UTF-8";
+@charset "UTF-8";
 
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body {
     height: 100vh;
-    width: 100vh;
+    width: 100%;
     background-color: black;
 }
 
 body {
-    background:url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -31,6 +32,7 @@ section#telefone {
     height: 627px;
     width: 311px;
     background: url(../imagens/frame-iphone.png) no-repeat;
+    background-size: contain;
 }
 
 iframe#tela {
@@ -39,4 +41,23 @@ iframe#tela {
     left: 22px;
     width: 269px;
     height: 471px;
+    border: none; /* Remover borda padrão */
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+    box-shadow:2x 2px 5px rgba(0, 0, 0, 0.404);
+}
+
+section#redes-sociais img:hover {
+    transform: scale(1.1); /* Pequeno efeito de zoom ao passar o mouse */
+    cursor: pointer;
 }
